tests/good/test00.tig
let
  type a = array of int
  var x := a[3] of 42
in
  x[1]
end
