tests/bad/bad00.tig
let
    type a = array of int
    type b = a
    var a : b := a[10] of 10
in
    a[13]
end
